logs/dag_id=dag_data_cleanse_raw_data_a1/run_id=manual__2025-09-23T041411.541628+0000/task_id=calculate_data/attempt=1.log
[2025-09-23T04:14:15.017+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_data_cleanse_raw_data_a1.calculate_data manual__2025-09-23T04:14:11.541628+00:00 [queued]>
[2025-09-23T04:14:15.022+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_data_cleanse_raw_data_a1.calculate_data manual__2025-09-23T04:14:11.541628+00:00 [queued]>
[2025-09-23T04:14:15.022+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2025-09-23T04:14:15.032+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): calculate_data> on 2025-09-23 04:14:11.541628+00:00
[2025-09-23T04:14:15.036+0000] {standard_task_runner.py:60} INFO - Started process 97 to run task
[2025-09-23T04:14:15.039+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_data_cleanse_raw_data_a1', 'calculate_data', 'manual__2025-09-23T04:14:11.541628+00:00', '--job-id', '6', '--raw', '--subdir', 'DAGS_FOLDER/cleansing_data_flow.py', '--cfg-path', '/tmp/tmp6wo0wbem']
[2025-09-23T04:14:15.040+0000] {standard_task_runner.py:88} INFO - Job 6: Subtask calculate_data
[2025-09-23T04:14:15.080+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_data_cleanse_raw_data_a1.calculate_data manual__2025-09-23T04:14:11.541628+00:00 [running]> on host 6e530bcdf33f
[2025-09-23T04:14:15.126+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='dag_data_cleanse_raw_data_a1' AIRFLOW_CTX_TASK_ID='calculate_data' AIRFLOW_CTX_EXECUTION_DATE='2025-09-23T04:14:11.541628+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-09-23T04:14:11.541628+00:00'
[2025-09-23T04:14:15.372+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/cleansing_data_flow.py", line 208, in calculate_data
    cursor.execute(insert_query, (
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 4: ...87951807,32.85793172690764,'STOP                ','2025-09-2...
                                                             ^

[2025-09-23T04:14:15.381+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=dag_data_cleanse_raw_data_a1, task_id=calculate_data, execution_date=20250923T041411, start_date=20250923T041415, end_date=20250923T041415
[2025-09-23T04:14:15.387+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 6 for task calculate_data (INSERT has more expressions than target columns
LINE 4: ...87951807,32.85793172690764,'STOP                ','2025-09-2...
                                                             ^
; 97)
[2025-09-23T04:14:15.412+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-09-23T04:14:15.423+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
